--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 # enum-iterator = { version = "1.4.1", default-features = false }
 libgdx-xs128 = "0.1.3"
-# strum = { version = "0.25.0", default-features = false }
+strum = { version = "0.25.0", default-features = false }
+strum_macros = { version = "0.25.0", default-features = false }
