--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "spire-sieve"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 # enum-iterator = { version = "1.4.1", default-features = false }
-libgdx-xs128 = "0.1.3"
+libgdx-xs128 = {version = "0.1.3", default-features = false }
 strum = { version = "0.25.0", default-features = false }
 strum_macros = { version = "0.25.0", default-features = false }
+
+[features]
+default = ["std"]
+std = ["strum/std", "libgdx-xs128/std" ]
